# NYPD.Mat.24-25.L.Homeworks

./: .gitignore  README.md  Untitled.ipynb
cosine-package/: pyproject.toml
cosine-package/.ipynb_checkpoints/: README-checkpoint.md
cosine-package/cosine_package.egg-info/: SOURCES.txt
cosine-package/cosine_package.egg-info/.ipynb_checkpoints/: PKG-INFO-checkpoint
cosine-package/my_utils/: my_utils.py
krakowbike-project/: .gitignore  README.md  krakowbike.ipynb  pyproject.toml
krakowbike-project/krakow_data/: pogoda.csv  powietrze2017.csv  powietrze2018.csv  powietrze2019.csv  powietrze2020.csv  powietrze2021.csv  rowery.csv
krakowbike-project/report/: krakow_bike_report.html
krakowbike-project/src/krakowbike/: __init__.py  __main__.py  analyze_data.py  load_data.py  preprocess_data.py  utils.py  visualize_data.py
krakowbike-project/templates/: report.html
krakowbike-project/tests/: test_analyze_data.py  test_load_data.py  test_preprocess_data.py
report/: krakow_bike_report.html
week7_homework/: Participants.txt  README.md  caesar_output.txt  encryption_decryption_functions.py  main.py  test_caeser_decode.txt  test_caeser_encode.txt  test_morse_decode.txt  test_morse_encode.txt
