[build-system]
requires = ["setuptools>=72"]
build-backend = "setuptools.build_meta"

[project]
name = "cosine-package"
version = "1.0"
authors = [
    {name = "Julia Bochniarz", email = "j.bochniarz@student.uw.edu.pl"},
]
description = "This is a python package for calculating cosine."
readme = {file = "README.md", content-type = "text/markdown"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Private :: Do Not Upload",
]
dependencies = [
    "numpy >= 2.1.0"
]

[project.urls]
Repository = "https://github.com/Julia-M-B/NYPD.Mat.24-25.L.Homeworks"

[project.scripts]
mycos = "my_utils.my_utils:main"

[tool.setuptools.packages.find]
where = ["."]
