[build-system]
requires = ["setuptools>=72"]
build-backend = "setuptools.build_meta"

[project]
name = "krakowbike"
version = "1.0"
authors = [
    {name = "Julia Bochniarz", email = "j.bochniarz@student.uw.edu.pl"},
]
description = "Python package for analyzing cycling traffic in Krakow, including weather data."
readme = {file = "README.md", content-type = "text/markdown"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Private :: Do Not Upload",
]
dependencies = [
    "numpy >= 2.2.6",
    "pandas >= 2.3.0",
    "pytest >= 8.4.0",
    "Jinja2 >= 3.1.6",
    "seaborn >= 0.13.2",
    "matplotlib >= 3.10.3",
]

[project.urls]
Repository = "https://github.com/Julia-M-B/NYPD.Mat.24-25.L.Homeworks"

[project.scripts]
genreport = "krakowbike.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"